# Digits-Classification

./: .gitignore  DEBUGGING.md  README.md  pyproject.toml
src/: main.py  mnist_loader.py  network.py  network_oop.py  test_run.py
src/digit_classifier/api/: app.py  schemas.py
src/digit_classifier/api/static/: index.html
src/digit_classifier/data/: loader.py
src/digit_classifier/diagnostics/: gradient_checker.py
src/digit_classifier/model/: network.py
src/digit_classifier/scripts/: train.py
src/digit_classifier/storage/: database.py
tests/: conftest.py  test_gradients.py  test_shapes.py  test_training.py
